# projectOne

./: .gitignore  README.md  initialize_git.sh  push_to_github.sh  pyproject.toml  requirements.txt  run.py  setup.py
projectone/: __init__.py  calculator.py  logger.py  main.py
tests/: __init__.py  test_main.py
