[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectone"
version = "0.1.0"
description = "Project One"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Benson Lin", email = "bensonmslin@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bensonms/projectone"
"Bug Tracker" = "https://github.com/bensonms/projectone/issues"

[tool.setuptools]
packages = ["projectone"]
